feat: add reviewable schedule suggestions
